--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "express": "^4.15.5",
     "express-session": "^1.15.6",
     "mongodb": "^3.2.3",
-    "mongoose": "^5.7.5",
+    "mongoose": "^5.11.16",
     "morgan": "^1.9.0",
-    "pm2": "^2.8.0"
+    "pm2": "^4.5.4",
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.0",
+    "@babel/cli": "^7.12.16",
+    "@babel/core": "^7.12.16",
     "@babel/plugin-proposal-decorators": "^7.2.0",
     "@babel/plugin-syntax-async-generators": "^7.2.0",
     "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-env": "^7.12.16",
     "@babel/register": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
