--- a/scripts/ecosystem/config.json
+++ b/scripts/ecosystem/config.json
@@ -1,1 +1,1 @@
-{"apps":{"master":{"script":"yarn start","name":"master","env":{"PORT":4000},"pid":4459,"pm_id":1},"dev":{"script":"yarn start","name":"dev","env":{"PORT":4001},"pid":4593,"pm_id":0}},"maxVersions":10,"autoClean":true,"network":{"allocatedPorts":[4000,4001],"portStart":4000}}
+{"apps":{"feat-webhook-integration":{"script":"yarn start","name":"feat-webhook-integration","env":{"PORT":4000},"pid":5446,"pm_id":0}},"maxVersions":10,"autoClean":true,"network":{"allocatedPorts":[4000],"portStart":4000}}
